@@ -324,6 +324,8 @@ https://github.com/networkupstools/nut/milestone/11
      then recommended to use `%UPSHOST%` in a custom formatting string).
    * Fixed printing of `%UPSHOST%` when multiple systems are being logged.
    * A `%t` for a TAB character can now be used in the formatting string.
+   * Added `-D` for debugging (and foregrounding by default), like with
+     other NUT daemons.
    * Added systemd and SMF service integration. [#1803]
 
  - More systemd integration:
